app/.cxx/ndkBuild/debug/armeabi-v7a/android_gradle_build_vr720_armeabi-v7a.stderr.txt
D:/Programming/AndroidProjects/VR720/app/src/main/jni/utils/StringHlp.cpp:6:10: error: no viable conversion from 'int' to 'va_list' (aka '__builtin_va_list')
        va_list marker = NULL;
                ^        ~~~~
note: candidate constructor (the implicit copy constructor) not viable: no known conversion from 'int' to 'const std::__va_list &' for 1st argument
note: candidate constructor (the implicit move constructor) not viable: no known conversion from 'int' to 'std::__va_list &&' for 1st argument
D:/Programming/AndroidProjects/VR720/app/src/main/jni/utils/StringHlp.cpp:24:10: error: no viable conversion from 'int' to 'va_list' (aka '__builtin_va_list')
        va_list marker = NULL;
                ^        ~~~~
note: candidate constructor (the implicit copy constructor) not viable: no known conversion from 'int' to 'const std::__va_list &' for 1st argument
note: candidate constructor (the implicit move constructor) not viable: no known conversion from 'int' to 'std::__va_list &&' for 1st argument
D:/Programming/AndroidProjects/VR720/app/src/main/jni/utils/StringHlp.cpp:39:24: error: use of undeclared identifier '_vscwprintf'; did you mean 'vwprintf'?
        size_t num_of_chars = _vscwprintf(_Format, marker);
                              ^~~~~~~~~~~
                              vwprintf
C:/Users/Roger/AppData/Local/Android/Sdk/ndk/21.3.6528147/build//../toolchains/llvm/prebuilt/windows-x86_64/sysroot/usr/include\wchar.h:82:5: note: 'vwprintf' declared here
int vwprintf(const wchar_t* __fmt, va_list __args);
    ^
D:/Programming/AndroidProjects/VR720/app/src/main/jni/utils/StringHlp.cpp:44:2: error: use of undeclared identifier 'vswprintf_s'; did you mean 'vswprintf'?
        vswprintf_s((wchar_t *)tmp.data(), tmp.capacity(), _Format, marker);
        ^~~~~~~~~~~
        vswprintf
C:/Users/Roger/AppData/Local/Android/Sdk/ndk/21.3.6528147/build//../toolchains/llvm/prebuilt/windows-x86_64/sysroot/usr/include\wchar.h:76:5: note: 'vswprintf' declared here
int vswprintf(wchar_t* __buf, size_t __n, const wchar_t* __fmt, va_list __args);
    ^
D:/Programming/AndroidProjects/VR720/app/src/main/jni/utils/StringHlp.cpp:51:24: error: use of undeclared identifier '_vscprintf'
        size_t num_of_chars = _vscprintf(_Format, marker);
                              ^
D:/Programming/AndroidProjects/VR720/app/src/main/jni/utils/StringHlp.cpp:57:2: error: use of undeclared identifier 'vsprintf_s'
        vsprintf_s((char *)tmp.data(), tmp.capacity(), _Format, marker);
        ^
D:/Programming/AndroidProjects/VR720/app/src/main/jni/utils/StringHlp.cpp:64:10: error: no viable conversion from 'int' to 'va_list' (aka '__builtin_va_list')
        va_list marker = NULL;
                ^        ~~~~
note: candidate constructor (the implicit copy constructor) not viable: no known conversion from 'int' to 'const std::__va_list &' for 1st argument
note: candidate constructor (the implicit move constructor) not viable: no known conversion from 'int' to 'std::__va_list &&' for 1st argument
D:/Programming/AndroidProjects/VR720/app/src/main/jni/utils/StringHlp.cpp:80:10: error: no viable conversion from 'int' to 'va_list' (aka '__builtin_va_list')
        va_list marker = NULL;
                ^        ~~~~
note: candidate constructor (the implicit copy constructor) not viable: no known conversion from 'int' to 'const std::__va_list &' for 1st argument
note: candidate constructor (the implicit move constructor) not viable: no known conversion from 'int' to 'std::__va_list &&' for 1st argument
8 errors generated.
make: *** [C:/Users/Roger/AppData/Local/Android/Sdk/ndk/21.3.6528147/build//../build/core/build-binary.mk:478: D:/Programming/AndroidProjects/VR720/app/build/intermediates/ndkBuild/debug/obj/local/armeabi-v7a/objs-debug/vr720/utils/StringHlp.o] Error 1
